--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
-@import "tailwindcss";
+/* @import "tailwindcss"; */
 
+@layer theme, base, components, 
+@import "tailwindcss/theme.css";
+/* @import "tailwindcss/preflight.css"; */
+@import "tailwindcss/utilities.css";
+/* 
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -19,8 +24,10 @@
   }
 }
 
+
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
